[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-mesh-nodes"
version = "0.1.0"
description = "Mesh generation and processing nodes for ComfyUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.19.0",
    "pillow>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/sdaAlbert/comfyui"
Repository = "https://github.com/sdaAlbert/comfyui.git"
Issues = "https://github.com/sdaAlbert/comfyui/issues"

[tool.setuptools]
packages = ["."]